--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
  <main>
      <div class="datecontainer">
-         <h1>Dag</h1>
+         <h1>Veckodag</h1>
          <p id="day"></p>
      </div>
      <div class="datecontainer">
@@ -23,7 +23,7 @@
         <p id="time"></p>
     </div>
     <div class="datecontainer">
-        <h1>Datum</h1>
+        <h1>Dag</h1>
         <p id="date"></p>
     </div>
  </main>   
